feat: Adding redis cache in front of unsplash request
Signed-off-by: Vincent Boutour <bob@vibioh.fr>

--- a/cmd/kitten/templates/kitten.html
+++ b/cmd/kitten/templates/kitten.html
@@ -33,6 +33,11 @@
     Kitten adds a command in your Slack's workspace or Discord server for finding an image from Unsplash and add caption on it.
   </h2 class="center">
 
+  <figure class="center screenshot">
+    <img src="/images/welcome.png" alt="What did you say?!">
+    <figcaption>Photo by <a href="https://unsplash.com/@tranmautritam">Tran Mau Tri Tam</a> on <a href="https://unsplash.com/photos/-81lVsfM4gQ">Unsplash</a></figcaption>
+  </figure>
+
   <p class="center">
     <a href="https://slack.com/oauth/v2/authorize?client_id=TO_BE_DEFINED&scope=commands&user_scope=">
       <img alt="Add to Slack" height="40" src="https://platform.slack-edge.com/img/add_to_slack.png" srcSet="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" />
