--- a/cmd/kitten/templates/kitten.html
+++ b/cmd/kitten/templates/kitten.html
@@ -17,7 +17,7 @@
   <meta property="og:description" content="{{ $description }}" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="{{ publicURL "" }}" />
-  <meta property="og:image" content="{{ publicURL "/images/discord.png" }}" />
+  <meta property="og:image" content="{{ publicURL "/images/kitten.png" }}" />
   <meta property="og:image:height" content="512" />
   <meta property="og:image:width" content="512" />
 {{ end }}
