fix: Fixing responsive design for homepage
Signed-off-by: Vincent Boutour <bob@vibioh.fr>

--- a/cmd/kitten/templates/kitten.html
+++ b/cmd/kitten/templates/kitten.html
@@ -34,7 +34,7 @@
   </h2 class="center">
 
   <figure class="center screenshot">
-    <img src="/images/welcome.png" alt="What did you say?!">
+    <img class="screenshot" src="/images/welcome.png" alt="What did you say?!">
     <figcaption>Photo by <a href="https://unsplash.com/@tranmautritam">Tran Mau Tri Tam</a> on <a href="https://unsplash.com/photos/-81lVsfM4gQ">Unsplash</a></figcaption>
   </figure>
 
