fix: Fixing utm source for homepage
Signed-off-by: Vincent Boutour <bob@vibioh.fr>

--- a/cmd/kitten/templates/kitten.html
+++ b/cmd/kitten/templates/kitten.html
@@ -35,7 +35,7 @@
 
   <figure class="center screenshot">
     <img class="screenshot" src="/images/welcome.png" alt="What did you say?!">
-    <figcaption>Photo by <a href="https://unsplash.com/@tranmautritam">Tran Mau Tri Tam</a> on <a href="https://unsplash.com/photos/-81lVsfM4gQ">Unsplash</a></figcaption>
+    <figcaption>Photo by <a href="https://unsplash.com/@tranmautritam?utm_source=SayIt&utm_medium=referral">Tran Mau Tri Tam</a> on <a href="https://unsplash.com/photos/-81lVsfM4gQ?utm_source=SayIt&utm_medium=referral">Unsplash</a></figcaption>
   </figure>
 
   <p class="center">
