feat(discord): Adding discord handler
Signed-off-by: Vincent Boutour <bob@vibioh.fr>

--- a/cmd/kitten/templates/kitten.html
+++ b/cmd/kitten/templates/kitten.html
@@ -45,7 +45,7 @@
   </p>
 
   <p class="center">
-    <a href="https://discord.com/api/oauth2/authorize?client_id=TO_BE_DEFINED&redirect_uri=https%3A%2F%2FKitten.vibioh.fr%2Fdiscord%2Foauth&scope=applications.commands">
+    <a href="https://discord.com/api/oauth2/authorize?client_id=959191057835393044&redirect_uri=https%3A%2F%2FKitten.vibioh.fr%2Fdiscord%2Foauth&scope=applications.commands">
       <img alt="Add to Discord" height="40" src="/images/discord.png" />
     </a>
   </center>
