--- a/cmd/kitten/templates/kitten.html
+++ b/cmd/kitten/templates/kitten.html
@@ -39,7 +39,7 @@
   </figure>
 
   <p class="center">
-    <a href="https://slack.com/oauth/v2/authorize?client_id=2426300949335.3310973634019&scope=commands&user_scope=">
+    <a href="https://slack.com/oauth/v2/authorize?client_id=2426300949335.3310973634019&scope=commands,files:write&user_scope=">
       <img alt="Add to Slack" height="40" src="https://platform.slack-edge.com/img/add_to_slack.png" srcSet="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" />
     </a>
   </p>
