feat(slack): Starting to store access token for performing upload
Signed-off-by: Vincent Boutour <bob@vibioh.fr>

--- a/cmd/kitten/templates/kitten.html
+++ b/cmd/kitten/templates/kitten.html
@@ -51,6 +51,6 @@
   </center>
 
   <p class="center margin">
-    We don't log anything, don't store any token, we just add a fun command in your workspace. Full code source is available <a href="https://github.com/ViBiOh/kitten" rel="noreferrer noopener">on GitHub</a>.
+    We don't log anything, we just add a fun command in your workspace. Full code source is available <a href="https://github.com/ViBiOh/kitten" rel="noreferrer noopener">on GitHub</a>.
   </p>
 {{ end }}
