--- a/cmd/kitten/templates/kitten.html
+++ b/cmd/kitten/templates/kitten.html
@@ -51,6 +51,6 @@
   </center>
 
   <p class="center margin">
-    We don't log anything, we just add a fun command in your workspace. Full code source is available <a href="https://github.com/ViBiOh/kitten" rel="noreferrer noopener">on GitHub</a>.
+    We don't log anything, we don't store any token. We just add a fun command in your workspace. Full code source is available <a href="https://github.com/ViBiOh/kitten" rel="noreferrer noopener">on GitHub</a>.
   </p>
 {{ end }}
