feat: Removing last reference to giphy
Signed-off-by: Vincent Boutour <bob@vibioh.fr>

--- a/cmd/kitten/templates/kitten.html
+++ b/cmd/kitten/templates/kitten.html
@@ -9,7 +9,7 @@
 
 {{ define "seo" }}
   {{ $title := "Kitten - Slack bot for Unsplash Caption" }}
-  {{ $description := "Kitten adds a command in your Slack's workspace or Discord server for finding an image from Unsplash or a gif from Giphy and add caption on it." }}
+  {{ $description := "Kitten adds a command in your Slack's workspace or Discord server for finding an image from Unsplash or a gif from Tenor and add caption on it." }}
 
   <title>{{ $title }}</title>
   <meta name="description" content="{{ $description }}">
@@ -30,7 +30,7 @@
   </style>
 
   <h2 class="center">
-    Kitten adds a command in your Slack's workspace or Discord server for finding an image from Unsplash or a gif from Giphy and add caption on it.
+    Kitten adds a command in your Slack's workspace or Discord server for finding an image from Unsplash or a gif from Tenor and add caption on it.
   </h2 class="center">
 
   <figure class="center screenshot">
