chore(deps): Bumping deps
Signed-off-by: Vincent Boutour <bob@vibioh.fr>

--- a/cmd/kitten/templates/index.tmpl
+++ b/cmd/kitten/templates/index.tmpl
@@ -1,5 +1,5 @@
 {{ define "main-style" }}
-  <style type="text/css" nonce="{{ .nonce }}">
+  <style nonce="{{ .nonce }}">
     :root {
       --primary: cornflowerblue;
       --success: limegreen;
